force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <nameField>
        <displayFormat>CNum-{0}</displayFormat>
        <label>Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>