force-app/main/default/objects/Customer__c/fields/Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>customer_first_name__c</fullName>
    <label>customer first name</label>
    <length>28</length>
    <type>Text</type>
</CustomField>