force-app/main/default/objects/Customer__c/fields/customer_order__c.field-meta.xml
<CustomField>
    <fullName>customer_order__c</fullName>
    <displayFormat>CustomerOrder-{0}</displayFormat>
    <externalId>true</externalId>
    <label>customer order</label>
    <type>AutoNumber</type>
</CustomField>