force-app/main/default/objects/Customer__c/fields/customer_order_date__c.field-meta.xml
<CustomField>
    <fullName>customer_order_date__c</fullName>
    <label>customer order date</label>
    <type>Date</type>
</CustomField>