force-app/main/default/objects/Customer__c/fields/Date_Served__c.field-meta.xml
<CustomField>
    <fullName>Date_Served__c</fullName>
    <label>Date Served</label>
    <type>Date</type>
</CustomField>