force-app/main/default/objects/Customer__c/fields/Is_Served__c.field-meta.xml
<CustomField>
    <fullName>Is_Served__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Served</label>
    <type>Checkbox</type>
</CustomField>