force-app/main/default/objects/Customer__c/fields/no_tip_count__c.field-meta.xml
<CustomField>
    <fullName>no_tip_count__c</fullName>
    <label>no tip count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>