force-app/main/default/objects/Customer__c/fields/pizza_size__c.field-meta.xml
<CustomField>
    <fullName>pizza_size__c</fullName>
    <label>pizza size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pizza 12 inch</fullName>
            </value>
            <value>
                <fullName>pizza 10 inch</fullName>
            </value>
            <value>
                <fullName>pizza 8 inch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>