force-app/main/default/objects/Customer__c/fields/subtotal__c.field-meta.xml
<CustomField>
    <fullName>subtotal__c</fullName>
    <label>subtotal</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>