force-app/main/default/objects/Customer__c/fields/tip__c.field-meta.xml
<CustomField>
    <fullName>tip__c</fullName>
    <label>tip</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>