force-app/main/default/objects/Customer__c/validationRules/minorder.validationRule-meta.xml
<ValidationRule>
    <fullName>minorder</fullName>
    <active>true</active>
    <errorConditionFormula>subtotal__c &lt; 10</errorConditionFormula>
    <errorMessage>minimum order of $10</errorMessage>
</ValidationRule>